@@ -31,6 +31,7 @@
 * Add - Enable iDeal UPE method.
 * Add - Payment method activation requirements modal and API integration.
 * Add - Add state handling for UPE methods for better merchant notification on what methods are able to be used.
+* Fix - Order currency incorrect if new user/customer created during checkout.
 
 = 3.1.0 - 2021-10-06 =
 * Fix - Issue affecting analytics for Multi-Currency orders made with a zero-decimal to non-zero decimal conversion.
